<resources>

    <string name="app_name">Kiù</string>
    <string name="action_settings">Settings</string>
    <string name="title_notification_helper">Notification helper</string>
    <string name="title_setting_helper">Settings</string>
    <string name="title_notification_kiuer">Notification kiuer</string>
    <string name="title_home_helper">Home Helper</string>
    <string name="title_home_kiuer">Home Kiuer</string>
    <string name="title_register">Sign In</string>
    <string name="ok">ok</string>

    <!-- Items string -->
    <string name="setting">Setting</string>
    <string name="home">home</string>
    <string name="chat">chat</string>
    <string name="notification">notification</string>
    <string name="exit">exit</string>


    <string name="notification_message"> This is a message of work!!</string>


    <!-- Login -->
    <string name="err_read_google"> Error while reading Google</string>
    <string name="err_login">Incorrect username and password</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="insert_name_password">Insert mail and password</string>

    <!-- content_main -->
    <string name="enter_ID"> Enter Username</string>
    <string name="enter_password">Enter password</string>
    <string name="str_login">LOGIN</string>
    <string name="logo_app">logo kiu application</string>

    <!-- RegisterActivity -->
    <string name="name_surname_insert">Insert name or surname</string>
    <string name="name_surname_invalid">Invalid name or surname</string>
    <string name="mail_invalid">Please, insert valid mail</string>
    <string name="empty_fields">Some fields are empty. Please, insert the values </string>
    <string name="psw_len_incorrect">Password length incorrect, must be greater then 5</string>
    <string name="type_user">Please, choose a type of user</string>
    <string name="registration_problem">An error occured while registration</string>
    <string name="connection_failed">Connection failded!</string>

    <!-- activity_register -->
    <string name="hint_name">Name</string>
    <string name="hint_surname">Surname</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string> <!-- no traslation -->
    <string name="label_activation_mode">ACTIVE PROFILE AS:</string>
    <string name="helper">HELPER</string>  <!-- no traslation -->
    <string name="kiuer">KIUER</string>  <!-- no traslation -->
    <string name="confirm">CONFIRM</string>

    <!-- dialog_registration_success -->
    <string name="registration_detail">REGISTRATION DETAILS</string>
    <string name="registration_success">Registration successfully occurred.\n\nPress
        ok to enter in your personal area. </string>
    <!-- BaseActivity extended message -->

    <string name="loading">Registration in progress...</string>
    <string name="login"> Login in progress... </string>
    <string name="title_activity_base">BaseActivity</string>

    <!-- MessagesActivity extended message -->
    <string name="send_btn">SEND</string>

    <!-- ConversationsActivity -->
    <string name="actionbar_chat_one_title">Chat</string>

    <!-- Conversations_fragmennt -->
    <string name="no_conversation">There isn\'t conversation here.</string>

    <!-- Helper_Home -->
    <!-- Kiuer_Home -->
    <string name="disp">availability:  </string>
    <string name="visible_by_kiuer">You are visible from Kiuer</string>
    <string name="invisible_by_kiuer">You are not visible from Kiuer</string>
    <string name="error_update_volley">Error data update. Internet Missing</string>
    <string name="hour_queue">Hour queue: </string>
    <string name="kiuer2">Kiuer:  </string>
    <string name="helper2">Helper:  </string>
    <string name="state">State:  </string>
    <string name="queue_start_at">queue to be carried out at </string>
    <string name="queue_assigned_to">Queue assigned to </string>
    <string name="place">Place:  </string>
    <string name="description">Description:  </string>
    <string name="queue_not_started">Queue not started </string>
    <string name="queue_in_progress">Queue in progress </string>
    <string name="queue_terminated">Queue terminated  </string>

    <!-- Helper_CloseQueue -->
    <!-- Kiuer_ClosingQueue -->
    <string name="close_queue">CLOSE QUEUE</string>
    <string name="queue_closed">Queue closed</string>
    <string name="hour_start_queue">Hour start queue:</string>
    <string name="hour_end_queue">Hour queue end:</string>
    <string name="time_queue">Time queue:</string>
    <string name="payment">Payment:</string>

    <!-- Kiuer_ShowHelperDetails -->
    <string name="queue_not_finished">The queue was not yet finished by helper</string>
    <string name="chiudi_coda">Close queue</string>
    <string name="goback">back</string>

    <!-- Kiuer_Details -->
    <string name="kiuer_details">KIUER DETAILS</string>
    <string name="inizia_coda">Start queue</string>
    <string name="termina_coda">End queue</string>

    <!-- Kiuer_Maps, Helper_MapsSetting -->
    <string name="title_activity_maps">Location Setting</string>
    <string name="error_loading_maps">Errore loading maps</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="disconnected">Disconnected. Please re-connect</string>
    <string name="network_lost">Network lost. Please re-connect</string>
    <string name="location_service_not_available">Location services not available to you</string>
    <string name="place_marker_on_location">Place the marker on the location where you want to give up the queue</string>
    <string name="select_helper">Select one of the helper visible on the map</string>
    <string name="click_here_for_details">Click here for details</string>
    <string name="request_sent">Request sent</string>
    <string name="unused_request">Unused request. Try again later.</string>
    <string name="set_request_time">Set request time</string>
    <string name="sign_your_position">Sign your marker position on the map</string>
    <string name="update_coordinates">Update coordinates</string>
    <string name="error_update_coordinates">Error update coordinates</string>
    <string name="error_read_coordinates">Error read coordinates</string>
    <string name="address_not_available">Unavailable address</string>

    <!-- Kiuer_MapsDetails -->
    <string name="send_request">Send request</string>
    <string name="hour_rate">Hour rate</string>
    <string name="start_availability">Start availability:</string>
    <string name="end_availability">End availability:</string>
    <string name="queue_done">Queue done:</string>
    <string name="invia_richiesta">send request</string>
    <string name="annulla">cancel</string>

    <!-- Kiuer_NotificationDetails -->
    <string name="request_accepted">Request accepted</string>
    <string name="request_rejected">Request rejected</string>
    <string name="pending_confirmation">Pending confirmation</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="time">Time</string>
    <string name="details_kiuer">NOTIFICATION DETAILS</string>

    <!-- Helper_Notification -->
    <string name="text_request_queue">want you to do the queue for him at </string>
    <string name="text_request_queue2">in</string>
    <string name="accept">accept</string>
    <string name="reject">reject</string>


    <!-- Helper_Settings -->
    <string name="update_setting">Update settings</string>
    <string name="error_update_setting">Error update settings</string>


    <!-- NotificationService -->
    <string name="waiting_message">Waiting for new messages</string>
    <string name="kiu">Kiù</string>
    <string name="kiu_chat">Kiù Chat</string>
    <string name="queue_started">started the queue</string>
    <string name="queue_end">ended the queue</string>
    <string name="new_messages_received">New messages received</string>
    <plurals name="incoming_queue_request">
        <item quantity="one">%d Incoming queue request</item>
        <item quantity="other">%d Incoming queue requests</item>
    </plurals>
    <plurals name="request_accepted_notification">
        <item quantity="one">%d Request accepted</item>
        <item quantity="other">%d Requests accepted</item>
    </plurals>
    <plurals name="request_rejected_notification">
        <item quantity="one">%d Request rejected</item>
        <item quantity="other">%d Requests rejected</item>
    </plurals>

    <!-- activity_kiuer_maps-->
    <string name="img_content">exit maps symbol icon</string>
    <string name="img_content1">action maps symbol icon</string>

    <!-- activity_messages-->
    <string name="send_msg_field">write message</string>
    <string name="send_msg_btn">send message button</string>

    <!-- activity_settings-->
    <string name="plus_sign">+</string>
    <string name="minus_sign">-</string>
    <string name="euro_hour_sign">€/h</string>
    <string name="fascia_oraria">Define time slot</string>
    <string name="fascia_costo">Define hourly cost</string>
    <string name="start_time">Start time availability:</string>
    <string name="end_time">End time availability:</string>
    <string name="btn_area">choose area</string>

    <!-- fragment_helper_close_kiu-->
    <string name="img_icon_descr">image user icon</string>

    <!-- fragment_kiuer_close_kiu-->
    <string name="img_icon_user_descr">image user icon</string>
    <string name="kiuer_close_kiu_title">CLOSE QUEUE</string>
    <string name="txt_rating">Rate</string>

    <!-- fragment_kiuer_details-->
    <string name="btn_details_kiuer">go!</string>
    <string name="btn2_details_kiuer">contact</string>
    <string name="img_user_kiuer">user kiuer image icon</string>
    <string name="img_details_kiuer">image kiuer icon</string>
    <string name="detail_kiuer_title">KIUER DETAILS</string>


    <!-- fragment_helper_details-->
    <string name="btn_details_helper">contact</string>
    <string name="img_user_helper">user helper image icon</string>
    <string name="detail_helper_title">HELPER DETAILS</string>

    <!-- fragment_kiuer_details_maps-->
    <string name="ora_richiesta">00:00</string>
    <string name="req_queue">Time request queue:</string>
    <string name="rating">Rating: </string>

    <!-- notification_layout_helper-->
    <string name="img_desc_1">image icon helper notification</string>

    <!-- notification_details_layout_helper-->
    <string name="notif_details_helper_title">NOTIFICATION DETAILS</string>

    <!-- notification_layout_kiuer-->
    <string name="img_desc_2">image icon kiuer notification</string>

    <!-- product_layout-->
    <string name="img_desc_3">image icon user</string>

    <!-- splash_layout-->
    <string name="splash_descr">image load app</string>


</resources>
