<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/menubar"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <item
        android:id="@+id/setting"
        android:icon="@drawable/ic_settings"
        android:title="@string/setting"
        app:showAsAction="always" />

    <item
        android:id="@+id/chat_helper"
        android:icon="@drawable/ic_chat"
        android:title="@string/chat"
        app:showAsAction="always" />

    <item
        android:id="@+id/notification_helper"
        android:icon="@drawable/ic_notifications"
        android:title="@string/notification"
        app:showAsAction="always" />

    <item
        android:id="@+id/exit_helper"
        android:icon="@drawable/ic_exit_to_app"
        android:title="@string/exit"
        app:showAsAction="always" />
</menu>
