<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.gambino_serra.KIU.Helper_Settings"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/fascia_oraria"
        android:textColor="@color/testo"
        android:textSize="@dimen/font_size_large"
        android:id="@+id/textView6"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />


    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center|center_horizontal"
        android:text="@string/start_time"
        android:textSize="18sp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:id="@+id/linearLayout4"
        android:layout_marginTop="31dp"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/orainiziodisponibilita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center|center_horizontal"
        android:textSize="18sp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="9dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        app:layout_constraintHorizontal_bias="0.501" />


    <TextView
        android:id="@+id/linearLayout5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center|center_horizontal"
        android:text="@string/end_time"
        android:textSize="18sp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/orainiziodisponibilita"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/linearLayout4" />

    <TextView
        android:id="@+id/orafinedisponibilita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center|center_horizontal"
        android:textSize="18sp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />


    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/fascia_costo"
        android:textColor="@color/testo"
        android:textSize="@dimen/font_size_large"
        tools:layout_conversion_absoluteX="9dp"
        tools:layout_conversion_absoluteY="222dp"
        tools:layout_conversion_absoluteWidth="391dp"
        tools:layout_conversion_absoluteHeight="37dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="109dp"
        app:layout_constraintTop_toBottomOf="@+id/orafinedisponibilita"
        android:id="@+id/textView" />


    <Button
        android:id="@+id/buttonMeno"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:elevation="10dp"
        android:text="@string/minus_sign"
        android:textSize="15sp"
        android:textStyle="bold"
        tools:layout_conversion_absoluteHeight="54dp"
        tools:layout_conversion_absoluteWidth="48dp"
        tools:layout_conversion_absoluteX="139dp"
        tools:layout_conversion_absoluteY="299dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/textView7"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/tariffa_oraria" />

    <TextView
        android:id="@+id/tariffa_oraria"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:textSize="@dimen/font_size_medium"
        tools:layout_conversion_absoluteX="187dp"
        tools:layout_conversion_absoluteY="312dp"
        tools:layout_conversion_absoluteWidth="0dp"
        tools:layout_conversion_absoluteHeight="28dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView"
        app:layout_constraintLeft_toRightOf="@+id/textView"
        android:layout_marginLeft="24dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/euro_hour_sign"
        android:textSize="@dimen/font_size_medium"
        tools:layout_conversion_absoluteX="187dp"
        tools:layout_conversion_absoluteY="312dp"
        tools:layout_conversion_absoluteWidth="36dp"
        tools:layout_conversion_absoluteHeight="28dp"
        android:id="@+id/textView7"
        app:layout_constraintBaseline_toBaselineOf="@+id/tariffa_oraria"
        app:layout_constraintLeft_toRightOf="@+id/tariffa_oraria"
        android:layout_marginLeft="8dp" />

    <Button
        android:id="@+id/buttonPiu"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:elevation="10dp"
        android:text="@string/plus_sign"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tariffa_oraria"
        app:layout_constraintLeft_toLeftOf="@+id/tariffa_oraria"
        app:layout_constraintRight_toRightOf="@+id/textView7"
        tools:layout_conversion_absoluteHeight="54dp"
        tools:layout_conversion_absoluteWidth="48dp"
        tools:layout_conversion_absoluteX="224dp"
        tools:layout_conversion_absoluteY="299dp" />


    <Button
        android:id="@+id/scegliArea"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="398dp"
        android:layout_height="53dp"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/colorPrimary"
        android:drawableTop="@android:drawable/ic_menu_myplaces"
        android:elevation="15dp"
        android:gravity="center"
        android:text="@string/btn_area"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageButton
        android:id="@+id/editInizio"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="0dp"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/orainiziodisponibilita"
        app:layout_constraintLeft_toRightOf="@+id/orainiziodisponibilita"
        app:layout_constraintTop_toTopOf="@+id/orainiziodisponibilita"
        app:layout_constraintVertical_bias="0.461"
        app:srcCompat="@android:drawable/ic_menu_edit" />

    <ImageButton
        android:id="@+id/editFine"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="0dp"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/orafinedisponibilita"
        app:layout_constraintLeft_toRightOf="@+id/orafinedisponibilita"
        app:layout_constraintTop_toTopOf="@+id/orafinedisponibilita"
        app:srcCompat="@android:drawable/ic_menu_edit" />


</android.support.constraint.ConstraintLayout>
