<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:contentDescription="@string/img_user_kiuer"
        android:src="@drawable/ic_person"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/text_nome_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="@dimen/font_size_medium"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/imageView"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        android:layout_marginBottom="8dp" />


    <Button
        android:id="@+id/luogo"
        android:layout_width="111dp"
        android:layout_height="48dp"
        android:background="@color/colorPrimary"
        android:drawableRight="@drawable/ic_go"
        android:elevation="10dp"
        android:text="@string/btn_details_kiuer"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        tools:ignore="ButtonStyle"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="64dp"
        tools:layout_conversion_absoluteX="125dp"
        tools:layout_conversion_absoluteY="318dp"
        android:layout_marginStart="22dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/contatta_kiuer"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline4" />

    <Button
        android:id="@+id/contatta_kiuer"
        android:layout_width="111dp"
        android:layout_height="48dp"
        android:layout_marginEnd="24dp"
        android:background="@color/colorPrimary"
        android:drawableRight="@drawable/ic_contact"
        android:elevation="10dp"
        android:text="@string/btn2_details_kiuer"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        tools:ignore="ButtonStyle"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="95dp"
        tools:layout_conversion_absoluteX="189dp"
        tools:layout_conversion_absoluteY="318dp"
        app:layout_constraintRight_toLeftOf="@+id/guideline4"
        android:layout_marginRight="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/dettagli" />


    <TextView
        android:id="@+id/dettagli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:textAlignment="textStart"
        android:textSize="@dimen/font_size_small"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline4"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="206dp" />


</android.support.constraint.ConstraintLayout>